responsiveness adjustments to avoid horizontal scrolling: part 1

--- a/css/home.css
+++ b/css/home.css
@@ -1304,10 +1304,17 @@ article p a {
 }
 @media screen and (max-width: 770px) {
     #investors > article li {
-        top: -60px;
+        top: 35px;
         height: 95px;
         padding: 19px 33px;
         width: 99px;
+    }
+}
+@media screen and (max-width: 530px) {
+    #investors > article li {
+        height: 84px;
+        padding: 6px 10px;
+        width: 100px;
     }
 }
 
@@ -1315,12 +1322,6 @@ article p a {
     height: 240px;    
     padding: 10px;
     width: 200px;
-}
-@media screen and (max-width: 770px) {
-    #investors > article li {
-        left: 175px;
-        top: 35px;
-    }
 }
 
 
@@ -1348,11 +1349,15 @@ article p a {
 #investors > article li p {
     font-family: proxima-nova, sans-serif;
     color: #333333;
-    font-size: 0.75em;
 }
 
 #investors > article li h3 {
-    font-size: 3em;
+    font-size: 3.3em;
+}
+@media screen and (max-width: 990px) {
+    #investors > article li h3 {
+        font-size: 4.6em;
+    }
 }
 @media screen and (max-width: 770px) {
     #investors > article li h3 {
@@ -1361,7 +1366,7 @@ article p a {
 }
 @media screen and (max-width: 530px) {
     #investors > article li h3 {
-        font-size: 6.5em;
+        font-size: 4em;
     }
 }
 
@@ -1369,6 +1374,9 @@ article p a {
     margin: 0;
 }
 
+/**
+ * First investor card
+ */
 #investors > article li:nth-child(1) {
     z-index: 200;
     left: 20px;
@@ -1386,7 +1394,16 @@ html.skrollr #investors > article li:nth-child(1) {
         left: 30px;
     }
 }
+@media screen and (max-width: 530px) {
+    #investors > article li:nth-child(1) {
+        left: -10px;
+        margin-top: 30px;
+    }
+}
 
+/**
+ * 2nd investor card
+ */
 #investors > article li:nth-child(2) {
     z-index: 199;
     left: 235px;
@@ -1405,7 +1422,16 @@ html.skrollr #investors > article li:nth-child(2) {
         left: 175px;
     }
 }
+@media screen and (max-width: 530px) {
+    #investors > article li:nth-child(2) {
+        left: 104px;
+        margin-top: 35px;
+    }
+}
 
+/**
+ * 3rd investor card
+ */
 #investors > article li:nth-child(3) {
     z-index: 198;
     left: 455px;
@@ -1424,10 +1450,19 @@ html.skrollr #investors > article li:nth-child(3) {
         left: 325px;
     }
 }
+@media screen and (max-width: 530px) {
+    #investors > article li:nth-child(3) {
+        margin-top: 41px;
+        left: 218px;
+    }
+}
 
+/**
+ * 4th investor card
+ */
 #investors > article li:nth-child(4) {
     z-index: 197;
-    left: 7px;
+    left: 27px;
     margin-top: 185px;
     -moz-transform: rotate(0deg);
     -ms-transform: rotate(0deg);
@@ -1443,8 +1478,16 @@ html.skrollr #investors > article li:nth-child(4) {
         margin-top: 120px;
     }
 }
+@media screen and (max-width: 530px) {
+    #investors > article li:nth-child(4) {
+        margin-top: 125px;
+        left: -13px;
+    }
+}
 
-
+/**
+ * 5th investor card
+ */
 #investors > article li:nth-child(5) {
     z-index: 196;
     left: 226px;
@@ -1464,13 +1507,20 @@ html.skrollr #investors > article li:nth-child(5) {
         margin-top: 120px;
     }
 }
+@media screen and (max-width: 530px) {
+    #investors > article li:nth-child(5) {
+        left: 100px;
+        margin-top: 125px;
+    }
+}
 
+/**
+ * 6th investor card
+ */
 #investors > article li:nth-child(6) {
     z-index: 195;
     left: 440px;
     margin-top: 200px;
-    padding: 24px 19px 10px 25px;
-    width: 190px;
     -moz-transform: rotate(0deg);
     -ms-transform: rotate(0deg);
     -o-transform: rotate(0deg);
@@ -1483,23 +1533,38 @@ html.skrollr #investors > article li:nth-child(6) {
 @media screen and (max-width: 770px) {
     #investors > article li:nth-child(6) {
         left: 320px;
-        margin-top: 135px;
-        width: 120px;
+        margin-top: 140px;
+    }
+}
+@media screen and (max-width: 530px) {
+    #investors > article li:nth-child(6) {
+        left: 215px;
+        margin-top: 120px;
     }
 }
 
 #investors > article li:nth-child(6) p {
-    font-size: 2em;
-    line-height: 1.2em;
+    font-size: 1.7em;
+    line-height: 1.4em;
+    padding: 1.1em 0;
+}
+@media screen and (max-width: 990px) {
+    #investors > article li:nth-child(6) p {
+        font-size: 2.2em;
+        line-height: 1.3em;
+        padding: 1em 0;
+    }
 }
 @media screen and (max-width: 770px) {
     #investors > article li:nth-child(6) p {
-        font-size: 2.7em;
+        font-size: 2.1em;
+        padding: .5em 0 0;
     }
 }
 @media screen and (max-width: 530px) {
     #investors > article li:nth-child(6) p {
-        font-size: 3.5em;
+        font-size: 2em;
+        padding: 1.5em 0 0;
     }
 }
 
@@ -1582,9 +1647,6 @@ html.skrollr #investors > article > ul {
     #investors > article > ul {
         width: 100%;
     }
-    #advisors > article > ul {
-        margin-left: -100px;
-    }
 }
 
 @media screen and (max-width: 530px) {
@@ -1597,9 +1659,6 @@ html.skrollr #investors > article > ul {
         -webkit-transform: scale(.5);
         transform: scale(.5);
         */
-    }
-    #investors > article > ul {
-        margin-left: -100px;
     }
 }
 
